--- a/EasyKanjiServer/EasyKanjiServer.csproj
+++ b/EasyKanjiServer/EasyKanjiServer.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+    </ItemGroup>
+
 </Project>
