Authentication via jwt and authorization via roles were added, new package for jwt authentication, the app was configured to use development secrets

--- a/EasyKanjiServer/EasyKanjiServer.csproj
+++ b/EasyKanjiServer/EasyKanjiServer.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>27359050-ac74-4cd6-9603-9734533dbbfc</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
     </ItemGroup>
 
