--- a/EasyKanjiServer/appsettings.json
+++ b/EasyKanjiServer/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EasyKanjiDB;Trusted_Connection=True;"
     },
     "Logging": {
         "LogLevel": {
