Package for caching via Redis was added; Middleware for checking invalidated JWTs via Redis was added

--- a/EasyKanjiServer/appsettings.json
+++ b/EasyKanjiServer/appsettings.json
@@ -2,6 +2,10 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EasyKanjiDB;Trusted_Connection=True;"
     },
+    "Redis": {
+        "Configuration": "localhost",
+        "InstanceName": "local"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
