--- a/EasyKanjiServer/EasyKanjiServer.csproj
+++ b/EasyKanjiServer/EasyKanjiServer.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.4" />
     </ItemGroup>
 
 </Project>
